# particle

./: .gitignore  docs.html  emanote-compiled-55bac81f9b4dda6c125072cba5b8e2d9.css  emanote-compiled-653d10dc0ee29035d232c231a7d90edf.css  emanote-compiled-794aaf658e1f7cc7460d9e8200e8202c.css  emanote-compiled-89b5b838f4e47589401d0ef9884f397b.css  emanote-compiled-963a8af5154f4cb1912dd651bd3299c8.css  emanote-compiled-b195d24c1e3f23665201e71bba1dae4a.css  emanote-compiled-b7b3f9f1763558afb89da959745ea95f.css  emanote-compiled-d82c918b989466d0e74b7a84e66f3c19.css  emergence.html  flake.nix  index.html  releases.html  research.html  tailwind.css  tenets.html  time.html  vision.html  ycombinator.html
-/: all.html  export.json  stork.st  tags.html  tasks.html
-/tags/: emanote.html
-/tags/emanote/: default-layer.html
.deploy/github/: index.yaml
.github/workflows/: publish.yaml
.zk/templates/: doc.md
docs/: emergence.md  index.html  index.md  index.yaml  releases.md  research.md  tenets.md  time.md  vision.md  ycombinator.md
docs/.zk/: config.toml  notebook.db
docs/releases/: v0.crap.md
docs/research/: gpu.md  ray-tracing.md  usd.md
docs/tenets/: open.md
docs/vision/: engine.md  index.md  universe.md
docs/vision/engine/: chain.md  decisions.md  density.md  equations.md  genesis.md  semantics.md  space.md
docs/vision/universe/: economy.md  hosting.md  hud.md  matrix.md  mechanics.md  sandbox.md  worlds.md
libparticle/: default.nix  main.cpp
nix/: particle.nix
particle/: default.nix
particle/particle/: CMakeLists.txt
particle/particle/cmake/: ParticleConfig.cmake.in  ParticleGenerateDocs.cmake  ParticleSources.cmake
particle/particle/particle/: concepts.hpp  dimensional.hpp  dimensional.test.cpp  forces.hpp  lifecycle.hpp  lifecycle.test.cpp  macros.hxx  point.cxx  point.hpp  point.hxx  sphere.hpp  state_exporter.cpp  state_exporter.hpp  version.cpp.in  version.cxx.in  version.hpp  version.hxx  world.cxx  world.hpp  world.hxx
particle/particle/particle/adapter/vulkan/: application.cpp  debugger.cpp  device.hpp  instance.cpp  instance.hpp  swap_chain.hpp  utils.hpp
particle/particle/particle/adapter/vulkan/su/: utils.hpp
particle/particle/particle/forces/: gravity.hpp
particle/particle/particle/layer/: application.hpp  simulation.cpp  simulation.hpp  simulation.test.cpp
particle/particle/simulations/: CMakeLists.txt
particle/particle/simulations/emergence/: CMakeLists.txt
particle/particle/simulations/emergence/bees/: CMakeLists.txt  main.cxx
releases/: v0.crap.html
research/: gpu.html  ray-tracing.html  usd.html
research/ray-tracing/one-weekend/: .gitignore  CMakeLists.txt  color.hpp  default.nix  main.cpp  vec3.hpp
research/vulkan/vulkan-tutorial/: .gitignore  CMakeLists.txt  default.nix  main.cpp
tenets/: open.html
vision/: engine.html  index.html  universe.html
vision/engine/: chain.html  decisions.html  density.html  equations.html  genesis.html  semantics.html  space.html
vision/universe/: economy.html  hosting.html  hud.html  matrix.html  mechanics.html  sandbox.html  worlds.html
